# metabrowser

./: .gitignore  Cargo.toml  README.md
frontend/: authentification.html  history.html  index.html  results.html  script.js  style.css
frontend/scripts/: authentification.js  common.js  history.js  index.js  results.js
frontend/styles/: authentification.css  history.css  index.css  results.css
web_library/: Cargo.toml
web_library/migrations/2026-01-07-194435-0000_create_users_and_history/: down.sql  up.sql
web_library/src/: aggregator.rs  config.rs  lib.rs  search_result.rs
web_library/src/browsers/: arxiv.rs  brave_engine.rs  config.rs  duckduckgo_crawler.rs  duckduckgo_engine.rs  mod.rs  search_engine.rs  semantic_scholar.rs  wikipedia.rs
web_library/src/db/: managed.rs  mod.rs  models.rs  schema.rs
web_server/: Cargo.toml
web_server/src/: handlers.rs  main.rs
