[package]
name = "web_library"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1",  features = ["json", "query"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
urlencoding = "2.1.3"
futures = "0.3.31"
log = "0.4.29"
