[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1", features = ["openssl", "macros"] }
actix-session = { version = "0.11.0", features = ["cookie-session"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features=["actix-web"] }
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.8"
web_library = { path = "../web_library" }
dotenvy = "0.15.7"
actix-cors = "0.7.1"
actix-files = "0.6.9"
